@@ -25,3 +25,4 @@ tab.lineGame=Line Game
 
 point.xy=({0}, {1})
 point.unknown=( ?, ? )
+pointsAwarded=+{0}
